Blenderplayer crashes when loading level #35122

Closed
opened 2013-04-28 02:43:34 +02:00 by Alex Fraser · 7 comments
Member

Category: Conversion

%%%My game plays fine in Blender. But in the most recent blenderplayer, it crashes when loading a level. The sequence is something like this:

  1. Load bootstrap.blend, which triggers another file to load via the Game actuator.
  2. Load menu.blend. User chooses a level, and it is loaded via bge.logic.startGame().
  3. Next level starts loading, but crashes.

Program received signal SIGSEGV, Segmentation fault.
0x0000000000d2c753 in BKE_node_tree_iter_step (ntreeiter=0x7fffffffce00, r_nodetree=0x7fffffffcde8, r_id=0x7fffffffcdf0)

  at /home/alex/Documents/projects/blender/blender/blender/source/blender/blenkernel/intern/node.c:3597

3597 ntreeiter->ngroup = ntreeiter->ngroup->id.next;

A full backtrace is attached. Creating a demo file may be tricky, but let me know if it's required and I will try.

Blender: 2.66.6 r56351
OS: Ubuntu 12.10 (64-bit)
Graphics: AMD Mobility Radeon HD 5430 Series (fglrx)
CPU: Intel Core i5 U 430%%%

**Category**: Conversion %%%My game plays fine in Blender. But in the most recent blenderplayer, it crashes when loading a level. The sequence is something like this: 1. Load bootstrap.blend, which triggers another file to load via the Game actuator. 2. Load menu.blend. User chooses a level, and it is loaded via bge.logic.startGame(). 3. Next level starts loading, but crashes. Program received signal SIGSEGV, Segmentation fault. 0x0000000000d2c753 in BKE_node_tree_iter_step (ntreeiter=0x7fffffffce00, r_nodetree=0x7fffffffcde8, r_id=0x7fffffffcdf0) ``` at /home/alex/Documents/projects/blender/blender/blender/source/blender/blenkernel/intern/node.c:3597 ``` 3597 ntreeiter->ngroup = ntreeiter->ngroup->id.next; A full backtrace is attached. Creating a demo file may be tricky, but let me know if it's required and I will try. Blender: 2.66.6 r56351 OS: Ubuntu 12.10 (64-bit) Graphics: AMD Mobility Radeon HD 5430 Series (fglrx) CPU: Intel Core i5 U 430%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%It might be good to note that while I don't have crashes on loading a blend file, I do have one on quitting the BlenderPlayer normally. The window closes, but then the console appears and freezes, with Windows then trying to find a solution, as the game crashed.

I'm using Windows 7 64-bit
Blender 2.66.6 r56333
AMD Radeon HD 7700 Series
CPU: AMD Athlon II X2 250 Processor 3.0 GHZ%%%

%%%It might be good to note that while I don't have crashes on loading a blend file, I do have one on quitting the BlenderPlayer normally. The window closes, but then the console appears and freezes, with Windows then trying to find a solution, as the game crashed. I'm using Windows 7 64-bit Blender 2.66.6 r56333 AMD Radeon HD 7700 Series CPU: AMD Athlon II X2 250 Processor 3.0 GHZ%%%

%%%It would be good to have a demo file, otherwise it's hard to test.%%%

%%%It would be good to have a demo file, otherwise it's hard to test.%%%
Author
Member

%%%No worries, I understand. Test files attached. Just run:

  blenderplayer start.blend

It should load level1.blend and level2.blend in sequence, but it crashes when loading level1. It seems to be triggered when the file being loaded links to a node material in another file.%%%

%%%No worries, I understand. Test files attached. Just run: ``` blenderplayer start.blend ``` It should load level1.blend and level2.blend in sequence, but it crashes when loading level1. It seems to be triggered when the file being loaded links to a node material in another file.%%%

%%%Thanks for the file, I'll annoy Lukas again and try to get him to look into this since it's related to nodes :)%%%

%%%Thanks for the file, I'll annoy Lukas again and try to get him to look into this since it's related to nodes :)%%%

%%%Fixed in svn rev56526. Thanks for the report, closing.%%%

%%%Fixed in svn rev56526. Thanks for the report, closing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35122
No description provided.